Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -100,5 +100,6 @@
   "mn93:12.6": "Würde man das Kind nach dem Vater als Adligen oder nach der Mutter als Brahmanen bezeichnen?“ ",
   "mn93:12.7": "„Sowohl die eine als auch die andere Bezeichnung wäre möglich.“ ",
   "mn93:13.1": "„Was denkst du, Assalāyana? ",
-  "mn93:13.2": "Da würde ein Brahmanenjunge mit einem adligen Mädchen schlafen und sie bekämen ein Kind. "
+  "mn93:13.2": "Da würde ein Brahmanenjunge mit einem adligen Mädchen schlafen und sie bekämen ein Kind. ",
+  "mn93:13.3": "Würde man das Kind nach der Mutter als Adligen oder nach dem Vater als Brahmanen bezeichnen?“ "
 }
