--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -102,5 +102,6 @@
   "mn93:13.1": "„Was denkst du, Assalāyana? ",
   "mn93:13.2": "Da würde ein Brahmanenjunge mit einem adligen Mädchen schlafen und sie bekämen ein Kind. ",
   "mn93:13.3": "Würde man das Kind nach der Mutter als Adligen oder nach dem Vater als Brahmanen bezeichnen?“ ",
-  "mn93:13.4": "„Sowohl die eine als auch die andere Bezeichnung wäre möglich.“ "
+  "mn93:13.4": "„Sowohl die eine als auch die andere Bezeichnung wäre möglich.“ ",
+  "mn93:14.1": "„Was denkst du, Assalāyana? "
 }
