Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -104,5 +104,6 @@
   "mn93:13.3": "Würde man das Kind nach der Mutter als Adligen oder nach dem Vater als Brahmanen bezeichnen?“ ",
   "mn93:13.4": "„Sowohl die eine als auch die andere Bezeichnung wäre möglich.“ ",
   "mn93:14.1": "„Was denkst du, Assalāyana? ",
-  "mn93:14.2": "Da würde sich eine Stute mit einem Esel paaren und würde ein Maultier zur Welt bringen. "
+  "mn93:14.2": "Da würde sich eine Stute mit einem Esel paaren und würde ein Maultier zur Welt bringen. ",
+  "mn93:14.3": "Würde man das Maultier nach der Mutter als Pferd oder nach dem Vater als Esel bezeichnen?“ "
 }
