--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -105,5 +105,6 @@
   "mn93:13.4": "„Sowohl die eine als auch die andere Bezeichnung wäre möglich.“ ",
   "mn93:14.1": "„Was denkst du, Assalāyana? ",
   "mn93:14.2": "Da würde sich eine Stute mit einem Esel paaren und würde ein Maultier zur Welt bringen. ",
-  "mn93:14.3": "Würde man das Maultier nach der Mutter als Pferd oder nach dem Vater als Esel bezeichnen?“ "
+  "mn93:14.3": "Würde man das Maultier nach der Mutter als Pferd oder nach dem Vater als Esel bezeichnen?“ ",
+  "mn93:14.4": "„Es ist ein Maultier, es ist eine Kreuzung. "
 }
