Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -108,5 +108,6 @@
   "mn93:14.3": "Würde man das Maultier nach der Mutter als Pferd oder nach dem Vater als Esel bezeichnen?“ ",
   "mn93:14.4": "„Es ist ein Maultier, es ist eine Kreuzung. ",
   "mn93:14.5": "Ich sehe in diesem Fall den Unterschied, ",
-  "mn93:14.6": "aber nicht in den vorigen Fällen.“ "
+  "mn93:14.6": "aber nicht in den vorigen Fällen.“ ",
+  "mn93:15.1": "„Was denkst du, Assalāyana? "
 }
