Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -109,5 +109,6 @@
   "mn93:14.4": "„Es ist ein Maultier, es ist eine Kreuzung. ",
   "mn93:14.5": "Ich sehe in diesem Fall den Unterschied, ",
   "mn93:14.6": "aber nicht in den vorigen Fällen.“ ",
-  "mn93:15.1": "„Was denkst du, Assalāyana? "
+  "mn93:15.1": "„Was denkst du, Assalāyana? ",
+  "mn93:15.2": "Da wären zwei Brahmanenschüler, die Brüder wären und zusammen im Mutterleib gelegen hätten. Einer wäre ein gebildeter Rezitator, der andere wäre kein gebildeter Rezitator. "
 }
