--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -111,5 +111,6 @@
   "mn93:14.6": "aber nicht in den vorigen Fällen.“ ",
   "mn93:15.1": "„Was denkst du, Assalāyana? ",
   "mn93:15.2": "Da wären zwei Brahmanenschüler, die Brüder wären und zusammen im Mutterleib gelegen hätten. Einer wäre ein gebildeter Rezitator, der andere wäre kein gebildeter Rezitator. ",
-  "mn93:15.3": "Wem würden die Brahmanen bei einer Essensspende für die Ahnen, bei der Spende eines Milchreisgerichts, bei einem Opfer oder einem Festmahl für Gäste zuerst zu essen geben?“ "
+  "mn93:15.3": "Wem würden die Brahmanen bei einer Essensspende für die Ahnen, bei der Spende eines Milchreisgerichts, bei einem Opfer oder einem Festmahl für Gäste zuerst zu essen geben?“ ",
+  "mn93:15.4": "„Sie würden zuerst dem Brahmanenschüler zu essen geben, der ein gebildeter Rezitator ist. "
 }
