--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -114,5 +114,6 @@
   "mn93:15.3": "Wem würden die Brahmanen bei einer Essensspende für die Ahnen, bei der Spende eines Milchreisgerichts, bei einem Opfer oder einem Festmahl für Gäste zuerst zu essen geben?“ ",
   "mn93:15.4": "„Sie würden zuerst dem Brahmanenschüler zu essen geben, der ein gebildeter Rezitator ist. ",
   "mn93:15.5": "Denn wie könnte eine Spende an jemanden, der kein gebildeter Rezitator ist, reiche Frucht bringen?“ ",
-  "mn93:16.1": "„Was denkst du, Assalāyana? "
+  "mn93:16.1": "„Was denkst du, Assalāyana? ",
+  "mn93:16.2": "Da wären zwei Brahmanenschüler, die Brüder wären und zusammen im Mutterleib gelegen hätten. Einer wäre ein gebildeter Rezitator, aber unmoralisch, von schlechtem Charakter, der andere wäre kein gebildeter Rezitator, aber sittlich und von gutem Charakter. "
 }
