--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -118,5 +118,6 @@
   "mn93:16.2": "Da wären zwei Brahmanenschüler, die Brüder wären und zusammen im Mutterleib gelegen hätten. Einer wäre ein gebildeter Rezitator, aber unmoralisch, von schlechtem Charakter, der andere wäre kein gebildeter Rezitator, aber sittlich und von gutem Charakter. ",
   "mn93:16.3": "Wem würden die Brahmanen zuerst zu essen geben?“ ",
   "mn93:16.4": "„Sie würden zuerst dem Brahmanenschüler zu essen geben, der kein gebildeter Rezitator, aber sittlich und von gutem Charakter ist. ",
-  "mn93:16.5": "Denn wie könnte eine Spende an jemanden, der unmoralisch und von schlechtem Charakter ist, reiche Frucht bringen?“ "
+  "mn93:16.5": "Denn wie könnte eine Spende an jemanden, der unmoralisch und von schlechtem Charakter ist, reiche Frucht bringen?“ ",
+  "mn93:17.1": "„Zuerst hast du dich auf die Geburt gestützt, Assalāyana, "
 }
