--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -119,5 +119,6 @@
   "mn93:16.3": "Wem würden die Brahmanen zuerst zu essen geben?“ ",
   "mn93:16.4": "„Sie würden zuerst dem Brahmanenschüler zu essen geben, der kein gebildeter Rezitator, aber sittlich und von gutem Charakter ist. ",
   "mn93:16.5": "Denn wie könnte eine Spende an jemanden, der unmoralisch und von schlechtem Charakter ist, reiche Frucht bringen?“ ",
-  "mn93:17.1": "„Zuerst hast du dich auf die Geburt gestützt, Assalāyana, "
+  "mn93:17.1": "„Zuerst hast du dich auf die Geburt gestützt, Assalāyana, ",
+  "mn93:17.2": "dann hast du zur Ausbildung gewechselt, "
 }
