--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -121,5 +121,6 @@
   "mn93:16.5": "Denn wie könnte eine Spende an jemanden, der unmoralisch und von schlechtem Charakter ist, reiche Frucht bringen?“ ",
   "mn93:17.1": "„Zuerst hast du dich auf die Geburt gestützt, Assalāyana, ",
   "mn93:17.2": "dann hast du zur Ausbildung gewechselt, ",
-  "mn93:17.3": "dann hast du zu enthaltsamem Verhalten gewechselt. "
+  "mn93:17.3": "dann hast du zu enthaltsamem Verhalten gewechselt. ",
+  "mn93:17.4": "Nun bist du zu genau dem gleichen Glauben an die Läuterung aller vier Kasten gekommen, für den auch ich plädiere.“ "
 }
