--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -124,5 +124,6 @@
   "mn93:17.3": "dann hast du zu enthaltsamem Verhalten gewechselt. ",
   "mn93:17.4": "Nun bist du zu genau dem gleichen Glauben an die Läuterung aller vier Kasten gekommen, für den auch ich plädiere.“ ",
   "mn93:17.5": "Auf diese Worte saß Assalāyana schweigend da, bedrückt, mit hängenden Schultern und gesenktem Kopf, niedergeschlagen und unfähig zu sprechen. ",
-  "mn93:18.1": "Als der Buddha das erkannte, sagte er zu ihm: "
+  "mn93:18.1": "Als der Buddha das erkannte, sagte er zu ihm: ",
+  "mn93:18.2": "„Es waren einmal, Assalāyana, sieben brahmanische Eremiten, die sich in Laubhütten an einem Ort in der Wildnis niedergelassen hatten. Sie hatten den folgenden schädlichen Irrglauben: "
 }
