Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -126,5 +126,6 @@
   "mn93:17.5": "Auf diese Worte saß Assalāyana schweigend da, bedrückt, mit hängenden Schultern und gesenktem Kopf, niedergeschlagen und unfähig zu sprechen. ",
   "mn93:18.1": "Als der Buddha das erkannte, sagte er zu ihm: ",
   "mn93:18.2": "„Es waren einmal, Assalāyana, sieben brahmanische Eremiten, die sich in Laubhütten an einem Ort in der Wildnis niedergelassen hatten. Sie hatten den folgenden schädlichen Irrglauben: ",
-  "mn93:18.3": "‚Nur die Brahmanen sind die erste Kaste; andere Kasten sind geringer. "
+  "mn93:18.3": "‚Nur die Brahmanen sind die erste Kaste; andere Kasten sind geringer. ",
+  "mn93:18.4": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. Nur die Brahmanen sind geläutert; andere sind es nicht. "
 }
