--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -128,5 +128,6 @@
   "mn93:18.2": "„Es waren einmal, Assalāyana, sieben brahmanische Eremiten, die sich in Laubhütten an einem Ort in der Wildnis niedergelassen hatten. Sie hatten den folgenden schädlichen Irrglauben: ",
   "mn93:18.3": "‚Nur die Brahmanen sind die erste Kaste; andere Kasten sind geringer. ",
   "mn93:18.4": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. Nur die Brahmanen sind geläutert; andere sind es nicht. ",
-  "mn93:18.5": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, von Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.‘ "
+  "mn93:18.5": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, von Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.‘ ",
+  "mn93:18.6": "Davon hörte der Eremit Devala der Dunkle. "
 }
