--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -130,5 +130,6 @@
   "mn93:18.4": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. Nur die Brahmanen sind geläutert; andere sind es nicht. ",
   "mn93:18.5": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, von Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.‘ ",
   "mn93:18.6": "Davon hörte der Eremit Devala der Dunkle. ",
-  "mn93:18.10": "Da nahm er sein Haar und seinen Bart ab, kleidete sich in purpurfarbene Roben, zog seine Stiefel an, nahm einen goldenen Stab und erschien im Hof der sieben brahmanischen Eremiten. "
+  "mn93:18.10": "Da nahm er sein Haar und seinen Bart ab, kleidete sich in purpurfarbene Roben, zog seine Stiefel an, nahm einen goldenen Stab und erschien im Hof der sieben brahmanischen Eremiten. ",
+  "mn93:18.11": "Dann wanderte er auf dem Hof umher und sagte: "
 }
