Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -133,5 +133,6 @@
   "mn93:18.10": "Da nahm er sein Haar und seinen Bart ab, kleidete sich in purpurfarbene Roben, zog seine Stiefel an, nahm einen goldenen Stab und erschien im Hof der sieben brahmanischen Eremiten. ",
   "mn93:18.11": "Dann wanderte er auf dem Hof umher und sagte: ",
   "mn93:18.12": "‚Wohin, ach, wohin nur sind diese brahmanischen Eremiten gegangen? ",
-  "mn93:18.13": "Wohin, ach, wohin nur sind diese brahmanischen Eremiten gegangen?‘ "
+  "mn93:18.13": "Wohin, ach, wohin nur sind diese brahmanischen Eremiten gegangen?‘ ",
+  "mn93:18.14": "Da sagen diese brahmanischen Eremiten: "
 }
