--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -136,5 +136,6 @@
   "mn93:18.13": "Wohin, ach, wohin nur sind diese brahmanischen Eremiten gegangen?‘ ",
   "mn93:18.14": "Da sagen diese brahmanischen Eremiten: ",
   "mn93:18.15": "‚Wer ist das, der da wie ein Cowboy auf unserem Hof umherwandert? ",
-  "mn93:18.18": "Wir wollen ihn verfluchen!‘ "
+  "mn93:18.18": "Wir wollen ihn verfluchen!‘ ",
+  "mn93:18.19": "Und sie verfluchten Devala den Dunklen: "
 }
