Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -137,5 +137,6 @@
   "mn93:18.14": "Da sagen diese brahmanischen Eremiten: ",
   "mn93:18.15": "‚Wer ist das, der da wie ein Cowboy auf unserem Hof umherwandert? ",
   "mn93:18.18": "Wir wollen ihn verfluchen!‘ ",
-  "mn93:18.19": "Und sie verfluchten Devala den Dunklen: "
+  "mn93:18.19": "Und sie verfluchten Devala den Dunklen: ",
+  "mn93:18.20": "‚Werde zu Asche, Asozialer! "
 }
