Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -139,5 +139,6 @@
   "mn93:18.18": "Wir wollen ihn verfluchen!‘ ",
   "mn93:18.19": "Und sie verfluchten Devala den Dunklen: ",
   "mn93:18.20": "‚Werde zu Asche, Asozialer! ",
-  "mn93:18.21": "Werde zu Asche, Asozialer!‘ "
+  "mn93:18.21": "Werde zu Asche, Asozialer!‘ ",
+  "mn93:18.22": "Aber je mehr ihn die Eremiten verfluchten, umso ansprechender, besser aussehend und anmutiger wurde Devala der Dunkle. "
 }
