--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -140,5 +140,6 @@
   "mn93:18.19": "Und sie verfluchten Devala den Dunklen: ",
   "mn93:18.20": "‚Werde zu Asche, Asozialer! ",
   "mn93:18.21": "Werde zu Asche, Asozialer!‘ ",
-  "mn93:18.22": "Aber je mehr ihn die Eremiten verfluchten, umso ansprechender, besser aussehend und anmutiger wurde Devala der Dunkle. "
+  "mn93:18.22": "Aber je mehr ihn die Eremiten verfluchten, umso ansprechender, besser aussehend und anmutiger wurde Devala der Dunkle. ",
+  "mn93:18.23": "Da sagten diese brahmanischen Eremiten: "
 }
