Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -142,5 +142,6 @@
   "mn93:18.21": "Werde zu Asche, Asozialer!‘ ",
   "mn93:18.22": "Aber je mehr ihn die Eremiten verfluchten, umso ansprechender, besser aussehend und anmutiger wurde Devala der Dunkle. ",
   "mn93:18.23": "Da sagten diese brahmanischen Eremiten: ",
-  "mn93:18.24": "‚Unsere Bußübungen sind vergebens! Unser geistlicher Weg ist fruchtlos! "
+  "mn93:18.24": "‚Unsere Bußübungen sind vergebens! Unser geistlicher Weg ist fruchtlos! ",
+  "mn93:18.25": "Denn wenn wir früher jemanden verfluchten, "
 }
