--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -144,5 +144,6 @@
   "mn93:18.23": "Da sagten diese brahmanischen Eremiten: ",
   "mn93:18.24": "‚Unsere Bußübungen sind vergebens! Unser geistlicher Weg ist fruchtlos! ",
   "mn93:18.25": "Denn wenn wir früher jemanden verfluchten, ",
-  "mn93:18.26": "dass er zu Asche werden solle, "
+  "mn93:18.26": "dass er zu Asche werden solle, ",
+  "mn93:18.27": "dann wurde er zu Asche. "
 }
