Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -145,5 +145,6 @@
   "mn93:18.24": "‚Unsere Bußübungen sind vergebens! Unser geistlicher Weg ist fruchtlos! ",
   "mn93:18.25": "Denn wenn wir früher jemanden verfluchten, ",
   "mn93:18.26": "dass er zu Asche werden solle, ",
-  "mn93:18.27": "dann wurde er zu Asche. "
+  "mn93:18.27": "dann wurde er zu Asche. ",
+  "mn93:18.28": "Aber je mehr wir diesen hier verfluchen, umso ansprechender, besser aussehend und anmutiger wird er.‘ "
 }
