--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -354,5 +354,6 @@
   "dn16:2.8.0": "10. Ogledalo Dhamme",
   "dn16:2.8.1": "Ānanda, nema ničeg neobičnog u tome da ljudsko biće umre.",
   "dn16:2.8.2": "Ako bi svaki put kad neko umre ti došao do Tathāgate i pitao ga isto ovo što sada pitaš, to bi bilo mučno za Tathāgatu.",
-  "dn16:2.8.3": "Zato ću te poučiti metodu nazvanom ogledalo Dhamma, pomoću kojeg plemeniti učenik, ukoliko želi, može objasniti sam za sebe:"
+  "dn16:2.8.3": "Zato ću te poučiti metodu nazvanom ogledalo Dhamma, pomoću kojeg plemeniti učenik, ukoliko želi, može objasniti sam za sebe:",
+  "dn16:2.8.4": "„Ja sam siguran da se neću preporoditi u paklu, u životinjskoj materici, u svetu duhova, u svetu lišavanja, na mestu patnje. Ja sam ušao u tok i ne mogu završiti u paklu. Sigurno ću dostići potpuno probuđenje.”"
 }
