--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -149,5 +149,6 @@
   "mn93:18.28": "Aber je mehr wir diesen hier verfluchen, umso ansprechender, besser aussehend und anmutiger wird er.‘ ",
   "mn93:18.29": "‚Werte Herren, eure Bußübungen sind nicht vergebens, euer spiritueller Pfad ist nicht fruchtlos. ",
   "mn93:18.30": "Bitte lasst euer Übelwollen gegen mich los.‘ ",
-  "mn93:18.31": "‚Wir lassen unser Übelwollen gegen dich los. "
+  "mn93:18.31": "‚Wir lassen unser Übelwollen gegen dich los. ",
+  "mn93:18.32": "Aber wer bist du, Herr?‘ "
 }
