Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -151,5 +151,6 @@
   "mn93:18.30": "Bitte lasst euer Übelwollen gegen mich los.‘ ",
   "mn93:18.31": "‚Wir lassen unser Übelwollen gegen dich los. ",
   "mn93:18.32": "Aber wer bist du, Herr?‘ ",
-  "mn93:18.33": "‚Habt ihr von dem Eremiten "
+  "mn93:18.33": "‚Habt ihr von dem Eremiten ",
+  "mn93:18.34": "Devala dem Dunklen gehört?‘ "
 }
