--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -356,5 +356,6 @@
   "dn16:2.8.2": "Ako bi svaki put kad neko umre ti došao do Tathāgate i pitao ga isto ovo što sada pitaš, to bi bilo mučno za Tathāgatu.",
   "dn16:2.8.3": "Zato ću te poučiti metodu nazvanom ogledalo Dhamma, pomoću kojeg plemeniti učenik, ukoliko želi, može objasniti sam za sebe:",
   "dn16:2.8.4": "„Ja sam siguran da se neću preporoditi u paklu, u životinjskoj materici, u svetu duhova, u svetu lišavanja, na mestu patnje. Ja sam ušao u tok i ne mogu završiti u paklu. Sigurno ću dostići potpuno probuđenje.”",
-  "dn16:2.9.1": "A kakav je to metod nazvan ’ogledalo Dhamme’?"
+  "dn16:2.9.1": "A kakav je to metod nazvan ’ogledalo Dhamme’?",
+  "dn16:2.9.3": "Tako, Ānanda, plemeniti učenik poseduje potpuno poverenje u Buddhu:"
 }
