Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -153,5 +153,6 @@
   "mn93:18.32": "Aber wer bist du, Herr?‘ ",
   "mn93:18.33": "‚Habt ihr von dem Eremiten ",
   "mn93:18.34": "Devala dem Dunklen gehört?‘ ",
-  "mn93:18.35": "‚Ja, Herr.‘ "
+  "mn93:18.35": "‚Ja, Herr.‘ ",
+  "mn93:18.36": "‚Ich bin es, ihr Herren.‘ "
 }
