--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -358,5 +358,6 @@
   "dn16:2.8.4": "„Ja sam siguran da se neću preporoditi u paklu, u životinjskoj materici, u svetu duhova, u svetu lišavanja, na mestu patnje. Ja sam ušao u tok i ne mogu završiti u paklu. Sigurno ću dostići potpuno probuđenje.”",
   "dn16:2.9.1": "A kakav je to metod nazvan ’ogledalo Dhamme’?",
   "dn16:2.9.3": "Tako, Ānanda, plemeniti učenik poseduje potpuno poverenje u Buddhu:",
-  "dn16:2.9.4": "’Zaista je Blaženi plemenit i potpuno probuđen, usavršen u znanju i ponašanju, srećan, znalac svetova, nenadmašni vodič onima kojima je potreban putokaz, učitelj božanskim i ljudskim bićima, budan, blažen’."
+  "dn16:2.9.4": "’Zaista je Blaženi plemenit i potpuno probuđen, usavršen u znanju i ponašanju, srećan, znalac svetova, nenadmašni vodič onima kojima je potreban putokaz, učitelj božanskim i ljudskim bićima, budan, blažen’.",
+  "dn16:2.9.5": "On poseduje potpuno poverenje u Dhammu:"
 }
