Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -154,5 +154,6 @@
   "mn93:18.33": "‚Habt ihr von dem Eremiten ",
   "mn93:18.34": "Devala dem Dunklen gehört?‘ ",
   "mn93:18.35": "‚Ja, Herr.‘ ",
-  "mn93:18.36": "‚Ich bin es, ihr Herren.‘ "
+  "mn93:18.36": "‚Ich bin es, ihr Herren.‘ ",
+  "mn93:18.37": "Da begaben sie sich zu Devala und verbeugten sich vor ihm. "
 }
