Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -359,5 +359,6 @@
   "dn16:2.9.1": "A kakav je to metod nazvan ’ogledalo Dhamme’?",
   "dn16:2.9.3": "Tako, Ānanda, plemeniti učenik poseduje potpuno poverenje u Buddhu:",
   "dn16:2.9.4": "’Zaista je Blaženi plemenit i potpuno probuđen, usavršen u znanju i ponašanju, srećan, znalac svetova, nenadmašni vodič onima kojima je potreban putokaz, učitelj božanskim i ljudskim bićima, budan, blažen’.",
-  "dn16:2.9.5": "On poseduje potpuno poverenje u Dhammu:"
+  "dn16:2.9.5": "On poseduje potpuno poverenje u Dhammu:",
+  "dn16:2.9.6": "’Blaženi je dobro izložio Dhammu, ona je vidljiva ovde i sada, vanvremena, poziva da je lično istražimo, praktikujemo i postanemo mudri razumevši je svako sam za sebe.’"
 }
