Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -155,5 +155,6 @@
   "mn93:18.34": "Devala dem Dunklen gehört?‘ ",
   "mn93:18.35": "‚Ja, Herr.‘ ",
   "mn93:18.36": "‚Ich bin es, ihr Herren.‘ ",
-  "mn93:18.37": "Da begaben sie sich zu Devala und verbeugten sich vor ihm. "
+  "mn93:18.37": "Da begaben sie sich zu Devala und verbeugten sich vor ihm. ",
+  "mn93:18.38": "Devala sagte zu ihnen: "
 }
