Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -361,5 +361,6 @@
   "dn16:2.9.4": "’Zaista je Blaženi plemenit i potpuno probuđen, usavršen u znanju i ponašanju, srećan, znalac svetova, nenadmašni vodič onima kojima je potreban putokaz, učitelj božanskim i ljudskim bićima, budan, blažen’.",
   "dn16:2.9.5": "On poseduje potpuno poverenje u Dhammu:",
   "dn16:2.9.6": "’Blaženi je dobro izložio Dhammu, ona je vidljiva ovde i sada, vanvremena, poziva da je lično istražimo, praktikujemo i postanemo mudri razumevši je svako sam za sebe.’",
-  "dn16:2.9.7": "On poseduje potpuno poverenje u monašku zajednicu:"
+  "dn16:2.9.7": "On poseduje potpuno poverenje u monašku zajednicu:",
+  "dn16:2.9.8": "’Zajednica učenika Blaženog vežba na pravi način, vežba na direktan način, vežba na mudar način, vežba na valjan način. Četiri para osoba, osam vrsta ljudi, ta zajednica učenika Blaženog vredna je darova, vredna gostoprimstva, vredna pohvala i vredna poštovanja, ona je nenadmašno polje sticanja zasluga u ovome svetu.’"
 }
