Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -363,5 +363,6 @@
   "dn16:2.9.6": "’Blaženi je dobro izložio Dhammu, ona je vidljiva ovde i sada, vanvremena, poziva da je lično istražimo, praktikujemo i postanemo mudri razumevši je svako sam za sebe.’",
   "dn16:2.9.7": "On poseduje potpuno poverenje u monašku zajednicu:",
   "dn16:2.9.8": "’Zajednica učenika Blaženog vežba na pravi način, vežba na direktan način, vežba na mudar način, vežba na valjan način. Četiri para osoba, osam vrsta ljudi, ta zajednica učenika Blaženog vredna je darova, vredna gostoprimstva, vredna pohvala i vredna poštovanja, ona je nenadmašno polje sticanja zasluga u ovome svetu.’",
-  "dn16:2.9.9": "On takođe poseduje vrlinu kakva priliči plemenitima, nenarušenu, neuprljanu, čistu, neukaljanu, oslobađajuću, vrlinu kakvu mudri hvale, a potpomaže koncentraciju."
+  "dn16:2.9.9": "On takođe poseduje vrlinu kakva priliči plemenitima, nenarušenu, neuprljanu, čistu, neukaljanu, oslobađajuću, vrlinu kakvu mudri hvale, a potpomaže koncentraciju.",
+  "dn16:2.9.10": "To je, Ānanda, metod nazvan ogledalo Dhamme, uz pomoć kojeg plemeniti učenik, ukoliko želi, može objasniti sam za sebe:"
 }
