--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -156,5 +156,6 @@
   "mn93:18.35": "‚Ja, Herr.‘ ",
   "mn93:18.36": "‚Ich bin es, ihr Herren.‘ ",
   "mn93:18.37": "Da begaben sie sich zu Devala und verbeugten sich vor ihm. ",
-  "mn93:18.38": "Devala sagte zu ihnen: "
+  "mn93:18.38": "Devala sagte zu ihnen: ",
+  "mn93:18.39": "‚Ich habe gehört, dass die sieben brahmanischen Eremiten, als sie sich in Laubhütten an einem Ort in der Wildnis niedergelassen hatten, den folgenden schädlichen Irrglauben hatten: "
 }
