Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -364,5 +364,6 @@
   "dn16:2.9.7": "On poseduje potpuno poverenje u monašku zajednicu:",
   "dn16:2.9.8": "’Zajednica učenika Blaženog vežba na pravi način, vežba na direktan način, vežba na mudar način, vežba na valjan način. Četiri para osoba, osam vrsta ljudi, ta zajednica učenika Blaženog vredna je darova, vredna gostoprimstva, vredna pohvala i vredna poštovanja, ona je nenadmašno polje sticanja zasluga u ovome svetu.’",
   "dn16:2.9.9": "On takođe poseduje vrlinu kakva priliči plemenitima, nenarušenu, neuprljanu, čistu, neukaljanu, oslobađajuću, vrlinu kakvu mudri hvale, a potpomaže koncentraciju.",
-  "dn16:2.9.10": "To je, Ānanda, metod nazvan ogledalo Dhamme, uz pomoć kojeg plemeniti učenik, ukoliko želi, može objasniti sam za sebe:"
+  "dn16:2.9.10": "To je, Ānanda, metod nazvan ogledalo Dhamme, uz pomoć kojeg plemeniti učenik, ukoliko želi, može objasniti sam za sebe:",
+  "dn16:2.9.11": "„Ja sam siguran da se neću preporoditi u paklu, u životinjskoj materici, u svetu duhova, u svetu lišavanja, na mestu patnje. Ja sam ušao u tok i ne mogu završiti u paklu. Sigurno ću dostići potpuno probuđenje.”"
 }
