--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -158,5 +158,6 @@
   "mn93:18.37": "Da begaben sie sich zu Devala und verbeugten sich vor ihm. ",
   "mn93:18.38": "Devala sagte zu ihnen: ",
   "mn93:18.39": "‚Ich habe gehört, dass die sieben brahmanischen Eremiten, als sie sich in Laubhütten an einem Ort in der Wildnis niedergelassen hatten, den folgenden schädlichen Irrglauben hatten: ",
-  "mn93:18.40": "„Nur die Brahmanen sind die erste Kaste; andere Kasten sind geringer. "
+  "mn93:18.40": "„Nur die Brahmanen sind die erste Kaste; andere Kasten sind geringer. ",
+  "mn93:18.41": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. "
 }
