Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -160,5 +160,6 @@
   "mn93:18.39": "‚Ich habe gehört, dass die sieben brahmanischen Eremiten, als sie sich in Laubhütten an einem Ort in der Wildnis niedergelassen hatten, den folgenden schädlichen Irrglauben hatten: ",
   "mn93:18.40": "„Nur die Brahmanen sind die erste Kaste; andere Kasten sind geringer. ",
   "mn93:18.41": "Nur die Brahmanen sind die helle Kaste; andere Kasten sind dunkel. ",
-  "mn93:18.42": "Nur die Brahmanen sind geläutert; andere sind es nicht. "
+  "mn93:18.42": "Nur die Brahmanen sind geläutert; andere sind es nicht. ",
+  "mn93:18.43": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, von Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.“‘ "
 }
