Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -368,5 +368,6 @@
   "dn16:2.9.11": "„Ja sam siguran da se neću preporoditi u paklu, u životinjskoj materici, u svetu duhova, u svetu lišavanja, na mestu patnje. Ja sam ušao u tok i ne mogu završiti u paklu. Sigurno ću dostići potpuno probuđenje.”",
   "dn16:2.10.1": "Dok je živeo kraj Nādike, Blaženi je često govorio monasima o Dhammi:",
   "dn16:2.10.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
-  "dn16:2.10.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge."
+  "dn16:2.10.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge.",
+  "dn16:2.10.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge."
 }
