--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -369,5 +369,6 @@
   "dn16:2.10.1": "Dok je živeo kraj Nādike, Blaženi je često govorio monasima o Dhammi:",
   "dn16:2.10.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
   "dn16:2.10.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge.",
-  "dn16:2.10.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge."
+  "dn16:2.10.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge.",
+  "dn16:2.10.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su"
 }
