--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -372,5 +372,6 @@
   "dn16:2.10.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge.",
   "dn16:2.10.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su",
   "dn16:2.10.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
-  "dn16:2.11.1": "Kada je ostao kraj Nādike koliko je želeo, Blaženi reče poštovanom Ānandi:"
+  "dn16:2.11.1": "Kada je ostao kraj Nādike koliko je želeo, Blaženi reče poštovanom Ānandi:",
+  "dn16:2.11.2": "„Hajde, Ānanda, idemo do Vesālīja.”"
 }
