--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -373,5 +373,6 @@
   "dn16:2.10.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen otrova, a to su",
   "dn16:2.10.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
   "dn16:2.11.1": "Kada je ostao kraj Nādike koliko je želeo, Blaženi reče poštovanom Ānandi:",
-  "dn16:2.11.2": "„Hajde, Ānanda, idemo do Vesālīja.”"
+  "dn16:2.11.2": "„Hajde, Ānanda, idemo do Vesālīja.”",
+  "dn16:2.11.3": "„Da, poštovani gospodine,” odgovori Ānanda."
 }
