Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -374,5 +374,6 @@
   "dn16:2.10.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
   "dn16:2.11.1": "Kada je ostao kraj Nādike koliko je želeo, Blaženi reče poštovanom Ānandi:",
   "dn16:2.11.2": "„Hajde, Ānanda, idemo do Vesālīja.”",
-  "dn16:2.11.3": "„Da, poštovani gospodine,” odgovori Ānanda."
+  "dn16:2.11.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
+  "dn16:2.11.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Vesālī, te se smesti u gaju kurtizane Ambapāli."
 }
