Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -375,5 +375,6 @@
   "dn16:2.11.1": "Kada je ostao kraj Nādike koliko je želeo, Blaženi reče poštovanom Ānandi:",
   "dn16:2.11.2": "„Hajde, Ānanda, idemo do Vesālīja.”",
   "dn16:2.11.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
-  "dn16:2.11.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Vesālī,"
+  "dn16:2.11.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Vesālī,",
+  "dn16:2.11.5": "te se smesti u gaju kurtizane Ambapāli."
 }
