Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -163,5 +163,6 @@
   "mn93:18.42": "Nur die Brahmanen sind geläutert; andere sind es nicht. ",
   "mn93:18.43": "Nur die Brahmanen sind die rechtmäßigen Söhne Brahmās, aus seinem Mund geboren, von Brahmā geboren, von Brahmā geschaffen, Erben Brahmās.“‘ ",
   "mn93:18.44": "‚Das ist richtig, Herr.‘ ",
-  "mn93:18.45": "‚Aber wisst ihr, "
+  "mn93:18.45": "‚Aber wisst ihr, ",
+  "mn93:18.46": "ob eure leibliche Mutter nur Beziehungen mit einem Brahmanen hatte und nicht jemandem, der kein Brahmane war?‘ "
 }
