Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -377,5 +377,6 @@
   "dn16:2.11.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
   "dn16:2.11.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Vesālī,",
   "dn16:2.11.5": "te se smesti u gaju kurtizane Ambapāli.",
-  "dn16:2.12.1": "I tu on ovako reče monasima:"
+  "dn16:2.12.1": "I tu on ovako reče monasima:",
+  "dn16:2.12.2": "„Monasi, monah treba da živi sa svesnošću i jasnim razumevanjem,"
 }
