--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -378,5 +378,6 @@
   "dn16:2.11.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Vesālī,",
   "dn16:2.11.5": "te se smesti u gaju kurtizane Ambapāli.",
   "dn16:2.12.1": "I tu on ovako reče monasima:",
-  "dn16:2.12.2": "„Monasi, monah treba da živi sa svesnošću i jasnim razumevanjem,"
+  "dn16:2.12.2": "„Monasi, monah treba da živi sa svesnošću i jasnim razumevanjem,",
+  "dn16:2.12.3": "to vam je moj savet."
 }
