--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -379,5 +379,6 @@
   "dn16:2.11.5": "te se smesti u gaju kurtizane Ambapāli.",
   "dn16:2.12.1": "I tu on ovako reče monasima:",
   "dn16:2.12.2": "„Monasi, monah treba da živi sa svesnošću i jasnim razumevanjem,",
-  "dn16:2.12.3": "to vam je moj savet."
+  "dn16:2.12.3": "to vam je moj savet.",
+  "dn16:2.12.4": "A kako to monah živi sa svesnošću?"
 }
