Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -380,5 +380,6 @@
   "dn16:2.12.1": "I tu on ovako reče monasima:",
   "dn16:2.12.2": "„Monasi, monah treba da živi sa svesnošću i jasnim razumevanjem,",
   "dn16:2.12.3": "to vam je moj savet.",
-  "dn16:2.12.4": "A kako to monah živi sa svesnošću?"
+  "dn16:2.12.4": "A kako to monah živi sa svesnošću?",
+  "dn16:2.12.5": "Tako što boravi kontemplirajući telo kao telo, marljiv, s jasnim razumevanjem i svesnošću, odloživši sa strane gramzivost i odbojnost prema ovom svetu;"
 }
