--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -383,5 +383,6 @@
   "dn16:2.12.4": "A kako to monah živi sa svesnošću?",
   "dn16:2.12.5": "Tako što boravi kontemplirajući telo kao telo, marljiv, s jasnim razumevanjem i svesnošću, odloživši sa strane gramzivost i odbojnost prema ovom svetu;",
   "dn16:2.12.6": "boravi kontemplirajući osećaje kao osećaje…",
-  "dn16:2.12.7": "boravi kontemplirajući um kao um…"
+  "dn16:2.12.7": "boravi kontemplirajući um kao um…",
+  "dn16:2.12.8": "boravi kontemplirajući objekte uma kao objekte uma, marljiv, s jasnim razumevanjem i svesnošću, odloživši sa strane gramzivost i odbojnost prema ovom svetu."
 }
