Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -385,5 +385,6 @@
   "dn16:2.12.6": "boravi kontemplirajući osećaje kao osećaje…",
   "dn16:2.12.7": "boravi kontemplirajući um kao um…",
   "dn16:2.12.8": "boravi kontemplirajući objekte uma kao objekte uma, marljiv, s jasnim razumevanjem i svesnošću, odloživši sa strane gramzivost i odbojnost prema ovom svetu.",
-  "dn16:2.12.9": "A kako to, monasi, monah živi sa jasnim razumevanjem?"
+  "dn16:2.12.9": "A kako to, monasi, monah živi sa jasnim razumevanjem?",
+  "dn16:2.13.1": "Kad odlazi i dolazi, monah postupa sa jasnim razumevanjem;"
 }
