--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -378,7 +378,7 @@
   "dn16:2.11.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Vesālī,",
   "dn16:2.11.5": "te se smesti u gaju kurtizane Ambapāli.",
   "dn16:2.12.1": "I tu on ovako reče monasima:",
-  "dn16:2.12.2": "„Monasi, monah treba da živi sa svesnošću i jasnim razumevanjem,",
+  "dn16:2.12.2": "„Monasi, monah treba da poseduje svesnost i jasno razumevanje,",
   "dn16:2.12.3": "to vam je moj savet.",
   "dn16:2.12.4": "A kako to monah živi sa svesnošću?",
   "dn16:2.12.5": "Tako što boravi kontemplirajući telo kao telo, marljiv, s jasnim razumevanjem i svesnošću, odloživši sa strane gramzivost i odbojnost prema ovom svetu;",
