--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -386,7 +386,7 @@
   "dn16:2.12.7": "boravi kontemplirajući um kao um…",
   "dn16:2.12.8": "boravi kontemplirajući objekte uma kao objekte uma, marljiv, s jasnim razumevanjem i svesnošću, odloživši sa strane gramzivost i odbojnost prema ovom svetu.",
   "dn16:2.12.9": "Tako monah poseduje svesnost.",
-  "dn16:2.13.1": "Kad odlazi i dolazi, monah postupa sa jasnim razumevanjem;",
+  "dn16:2.13.1": "A kako to monah poseduje svesno razumevanje?",
   "dn16:2.13.2": "kad gleda pravo i kad gleda u stranu, kad savija i kad pruža svoje udove, kad oblači svoj donji ogrtač, kad nosi spoljašnji ogrtač i zdelu za prošenje hrane, kad jede, pije, žvaće i guta hranu, kad obavlja veliku i malu nuždu, kad hoda, stoji, sedi, leže i ustaje, govori i ćuti, postupa on sa jasnim razumevanjem.",
   "dn16:2.13.3": "Tako, monasi, monah živi sa jasnim razumevanjem."
 }
