--- a/translation/sr/brankokovacevic/sutta/dn/dn2_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn2_translation-sr-brankokovacevic.json
@@ -388,7 +388,7 @@
   "dn2:64.11": "Na taj način, veliki kralju, monah stražari na vratima čula. ",
   "dn2:65.0": "4.3.2.2. Svesnost i jasno razumevanje ",
   "dn2:65.1": "A kako to, veliki kralju, monah poseduje svesnost i jasno razumevanje? ",
-  "dn2:65.2": "Tako, veliki kralju, kad odlazi i dolazi, monah postupa sa jasnim razumevanjem; kad gleda pravo i kad gleda u stranu, postupa s punom pažnjom; kad savija i kad pruža svoje udove, postupa sa punom pažnjom; kad oblači svoj donji ogrtač, kad nosi spoljašnji ogrtač i zdelu za prošenje hrane, postupa s punom pažnjom; kad jede, pije, žvaće i guta hranu, postupa s punom pažnjom; kad obavlja veliku i malu nuždu, postupa s punom pažnjom; kad hoda, stoji, sedi, leže i ustaje, govori i ćuti, postupa s punom pažnjom. ",
+  "dn2:65.2": "Tako što, monasi, kad odlazi i dolazi, monah postupa sa jasnim razumevanjem; kad gleda pravo i kad gleda u stranu, postupa sa jasnim razumevanjem; kad savija i kad pruža svoje udove, postupa sa jasnim razumevanjem; kad oblači svoj donji ogrtač, kad nosi spoljašnji ogrtač i zdelu za prošenje hrane, postupa sa jasnim razumevanjem; kad jede, pije, žvaće i guta hranu, postupa sa jasnim razumevanjem; kad obavlja veliku i malu nuždu, postupa sa jasnim razumevanjem; kad hoda, stoji, sedi, leže i ustaje, govori i ćuti, postupa sa jasnim razumevanjem.",
   "dn2:65.3": "Na taj način, veliki kralju, monah poseduje svesnost i jasno razumevanje. ",
   "dn2:66.0": "4.3.2.3. Zadovoljenost ",
   "dn2:66.1": "A kako je to, veliki kralju, monah zadovoljan? ",
