Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -387,6 +387,6 @@
   "dn16:2.12.8": "boravi kontemplirajući objekte uma kao objekte uma, marljiv, s jasnim razumevanjem i svesnošću, odloživši sa strane gramzivost i odbojnost prema ovom svetu.",
   "dn16:2.12.9": "Tako monah poseduje svesnost.",
   "dn16:2.13.1": "A kako to monah poseduje svesno razumevanje?",
-  "dn16:2.13.2": "",
+  "dn16:2.13.2": "Tako što, monasi, kad odlazi i dolazi, monah postupa sa jasnim razumevanjem; kad gleda pravo i kad gleda u stranu, postupa sa jasnim razumevanjem; kad savija i kad pruža svoje udove, postupa sa jasnim razumevanjem; kad oblači svoj donji ogrtač, kad nosi spoljašnji ogrtač i zdelu za prošenje hrane, postupa sa jasnim razumevanjem; kad jede, pije, žvaće i guta hranu, postupa sa jasnim razumevanjem; kad obavlja veliku i malu nuždu, postupa sa jasnim razumevanjem; kad hoda, stoji, sedi, leže i ustaje, govori i ćuti, postupa sa jasnim razumevanjem.",
   "dn16:2.13.3": "Tako, monasi, monah živi sa jasnim razumevanjem."
 }
