--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -388,5 +388,5 @@
   "dn16:2.12.9": "Tako monah poseduje svesnost.",
   "dn16:2.13.1": "A kako to monah poseduje svesno razumevanje?",
   "dn16:2.13.2": "Tako što, monasi, kad odlazi i dolazi, monah postupa sa jasnim razumevanjem; kad gleda pravo i kad gleda u stranu, postupa sa jasnim razumevanjem; kad savija i kad pruža svoje udove, postupa sa jasnim razumevanjem; kad oblači svoj donji ogrtač, kad nosi spoljašnji ogrtač i zdelu za prošenje hrane, postupa sa jasnim razumevanjem; kad jede, pije, žvaće i guta hranu, postupa sa jasnim razumevanjem; kad obavlja veliku i malu nuždu, postupa sa jasnim razumevanjem; kad hoda, stoji, sedi, leže i ustaje, govori i ćuti, postupa sa jasnim razumevanjem.",
-  "dn16:2.13.3": "Tako, monasi, monah živi sa jasnim razumevanjem."
+  "dn16:2.13.3": "Tako, monasi, monah poseduje jasno razumevanje."
 }
