Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -391,5 +391,6 @@
   "dn16:2.13.3": "Tako monah poseduje jasno razumevanje.",
   "dn16:2.13.4": "Monasi, monah treba da živi sa svesnošću i jasnim razumevanjem,",
   "dn16:2.13.5": "to vam je moj savet.",
-  "dn16:2.14.0": "11. Kurtizana Ambapālī"
+  "dn16:2.14.0": "11. Kurtizana Ambapālī",
+  "dn16:2.14.1": "I doču kurtizana Ambapālī: „Priča se da je Blaženi stigao u Vesālī, da boravi kraj Vesālīja, u mom mangovom gaju.”"
 }
