--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -392,5 +392,6 @@
   "dn16:2.13.4": "Monasi, monah treba da živi sa svesnošću i jasnim razumevanjem,",
   "dn16:2.13.5": "to vam je moj savet.",
   "dn16:2.14.0": "11. Kurtizana Ambapālī",
-  "dn16:2.14.1": "I doču kurtizana Ambapālī: „Priča se da je Blaženi stigao u Vesālī, da boravi kraj Vesālīja, u mom mangovom gaju.”"
+  "dn16:2.14.1": "I doču kurtizana Ambapālī: „Priča se da je Blaženi stigao u Vesālī, da boravi kraj Vesālīja, u mom mangovom gaju.”",
+  "dn16:2.14.2": "Onda ona naredi da se pripremi veliki broj svečanih kočija, pope se na jednu od njih i praćena ostalima izveze se iz Vesālīja ka svom gaju."
 }
