Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -394,5 +394,6 @@
   "dn16:2.14.0": "11. Kurtizana Ambapālī",
   "dn16:2.14.1": "I doču kurtizana Ambapālī: „Priča se da je Blaženi stigao u Vesālī, da boravi kraj Vesālīja, u mom mangovom gaju.”",
   "dn16:2.14.2": "Onda ona naredi da se pripremi veliki broj svečanih kočija, pope se na jednu od njih i praćena ostalima izveze se iz Vesālīja ka svom gaju.",
-  "dn16:2.14.3": "Vozila se kočijama dokle je to bilo moguće, a onda siđe i peške otide do Blaženoga. Kada je stigla, pokloni mu se, pa sede sa strane."
+  "dn16:2.14.3": "Vozila se kočijama dokle je to bilo moguće, a onda siđe i peške otide do Blaženoga. Kada je stigla, pokloni mu se, pa sede sa strane.",
+  "dn16:2.14.4": "Dok je tako sedela, Blaženi je uputi, podstaknu, nadahnu i ohrabri govorom o Dhammi."
 }
