--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -397,5 +397,6 @@
   "dn16:2.14.3": "Vozila se kočijama dokle je to bilo moguće, a onda siđe i peške otide do Blaženoga. Kada je stigla, pokloni mu se, pa sede sa strane.",
   "dn16:2.14.4": "Dok je tako sedela, Blaženi je uputi, podstaknu, nadahnu i ohrabri govorom o Dhammi.",
   "dn16:2.14.5": "Onda kurtizana Ambapālī reče Blaženom:",
-  "dn16:2.14.6": "„Poštovani gospodine, molim vas da zajedno sa monaškom zajednicom prihvatite moj poziv za sutrašnji obrok.”"
+  "dn16:2.14.6": "„Poštovani gospodine, molim vas da zajedno sa monaškom zajednicom prihvatite moj poziv za sutrašnji obrok.”",
+  "dn16:2.14.7": "Blaženi ćutke prihvati ovaj poziv."
 }
