Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -398,5 +398,6 @@
   "dn16:2.14.4": "Dok je tako sedela, Blaženi je uputi, podstaknu, nadahnu i ohrabri govorom o Dhammi.",
   "dn16:2.14.5": "Onda kurtizana Ambapālī reče Blaženom:",
   "dn16:2.14.6": "„Poštovani gospodine, molim vas da zajedno sa monaškom zajednicom prihvatite moj poziv za sutrašnji obrok.”",
-  "dn16:2.14.7": "Blaženi ćutke prihvati ovaj poziv."
+  "dn16:2.14.7": "Blaženi ćutke prihvati ovaj poziv.",
+  "dn16:2.14.8": "Razumevši da je Blaženi prihvatio poziv, kurtizana Ambapālī se pokloni, pa pazeći da joj Blaženi ostane sa desne strane, otide."
 }
