Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -401,5 +401,6 @@
   "dn16:2.14.7": "Blaženi ćutke prihvati ovaj poziv.",
   "dn16:2.14.8": "Razumevši da je Blaženi prihvatio poziv, kurtizana Ambapālī se pokloni, pa pazeći da joj Blaženi ostane sa desne strane, otide.",
   "dn16:2.15.1": "Dočuše i Liććhavī iz Vesālija: „Priča se da je Blaženi stigao u Vesālī, da boravi kraj Vesālīja, u Ambapālīnom mangovom gaju.”",
-  "dn16:2.15.2": "Onda narediše da se pripremi veliki broj svečanih kočija, popeše se na njih i izvezoše iz Vesālīja."
+  "dn16:2.15.2": "Onda narediše da se pripremi veliki broj svečanih kočija, popeše se na njih i izvezoše iz Vesālīja.",
+  "dn16:2.15.3": "Neki od njih bili su plavi, plavo obojenog lica, u plavom odelu, sa plavim ukrasima. Drugi su bili žuti, žuto obojenog lica, u žutom odelu, sa žutim ukrasima. Neki drugi su bili crveni, crveno obojenog lica, u crvenom odelu, sa crvenim ukrasima. Neki drugi su bili beli, belo obojenog lica, u belom odelu, sa belim ukrasima."
 }
