--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -405,5 +405,6 @@
   "dn16:2.15.3": "Neki od njih bili su plavi, plavo obojenog lica, u plavom odelu, sa plavim ukrasima. Drugi su bili žuti, žuto obojenog lica, u žutom odelu, sa žutim ukrasima. Neki drugi su bili crveni, crveno obojenog lica, u crvenom odelu, sa crvenim ukrasima. Neki drugi su bili beli, belo obojenog lica, u belom odelu, sa belim ukrasima.",
   "dn16:2.16.1": "I tako kurtizana Ambapālī naiđe na putu na te Liććhavī mladiće, kola u kola, točak u točak, rudu u rudu.",
   "dn16:2.16.2": "A Liććhavī joj rekoše:",
-  "dn16:2.16.3": "„Zašto si ti, javna ženo, preprečila put Liććhavī mladićima, kola u kola, rudu u rudu, točak u točak?”"
+  "dn16:2.16.3": "„Zašto si ti, javna ženo, preprečila put Liććhavī mladićima, kola u kola, rudu u rudu, točak u točak?”",
+  "dn16:2.16.4": "„Zato što se, mlada gospodo, vraćam od Blaženog, koji je prihvatio moj poziv za sutrašnji obrok, zajedno sa celom monaškom zajednicom.”"
 }
