--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -406,5 +406,6 @@
   "dn16:2.16.1": "I tako kurtizana Ambapālī naiđe na putu na te Liććhavī mladiće, kola u kola, točak u točak, rudu u rudu.",
   "dn16:2.16.2": "A Liććhavī joj rekoše:",
   "dn16:2.16.3": "„Zašto si ti, javna ženo, preprečila put Liććhavī mladićima, kola u kola, rudu u rudu, točak u točak?”",
-  "dn16:2.16.4": "„Zato što se, mlada gospodo, vraćam od Blaženog, koji je prihvatio moj poziv za sutrašnji obrok, zajedno sa celom monaškom zajednicom.”"
+  "dn16:2.16.4": "„Zato što se, mlada gospodo, vraćam od Blaženog, koji je prihvatio moj poziv za sutrašnji obrok, zajedno sa celom monaškom zajednicom.”",
+  "dn16:2.16.5": "„Ambapāli, prepusti nam taj obrok za stotinu hiljada!”"
 }
