Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -407,5 +407,6 @@
   "dn16:2.16.2": "A Liććhavī joj rekoše:",
   "dn16:2.16.3": "„Zašto si ti, javna ženo, preprečila put Liććhavī mladićima, kola u kola, rudu u rudu, točak u točak?”",
   "dn16:2.16.4": "„Zato što se, mlada gospodo, vraćam od Blaženog, koji je prihvatio moj poziv za sutrašnji obrok, zajedno sa celom monaškom zajednicom.”",
-  "dn16:2.16.5": "„Ambapāli, prepusti nam taj obrok za stotinu hiljada!”"
+  "dn16:2.16.5": "„Ambapāli, prepusti nam taj obrok za stotinu hiljada!”",
+  "dn16:2.16.6": "„Čak i kada biste mi, mlada gospodo, dali čitav Vesālī, zajedno sa svim njegovim bogatstvom, ne bih vam prepustila taj obrok.”"
 }
