--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -411,5 +411,6 @@
   "dn16:2.16.6": "„Čak i kada biste mi, mlada gospodo, dali čitav Vesālī, zajedno sa svim njegovim bogatstvom, ne bih vam prepustila taj obrok.”",
   "dn16:2.16.7": "A Liććhavī pljesnuše rukama:",
   "dn16:2.16.8": "„Ah, izigrala nas je ova javna žena, porazila nas je ova javna žena!”",
-  "dn16:2.16.9": "Potom produžiše ka Ambapālinom gaju."
+  "dn16:2.16.9": "Potom produžiše ka Ambapālinom gaju.",
+  "dn16:2.17.1": "I Blaženi ih vide još iz daleka kako dolaze, "
 }
