Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -595,7 +595,7 @@
   "dn14:3.14.4": "Onda oni ovako pomisliše:",
   "dn14:3.14.5": "„Mora da to nije obično učenje i praksa, niti je zaređenje princa Khaṇḍe i Tisse, sin prvosveštenika, obično.",
   "dn14:3.14.6": "Ako su oni to učinili, zašto ne bismo i mi?”",
-  "dn14:3.14.7": "I tako čitava ta grupa ljudi, njih osamdeset četiri hiljade, stigoše u Bandhumatī i otidoše do Khema parka jelena, do Bude Vipassīja, plemenitoga i potpuno probuđenoga. Kada su stigli, pokloniše mu se i sedoše sa strane.",
+  "dn14:3.14.7": "I tako čitava ta grupa ljudi, njih osamdeset četiri hiljade, stigoše u Bandhumatī i otidoše do Khema parka jelena, do Bude Vipassīja, plemenitoga i potpuno probuđenoga. Kada su stigli, pokloniše mu se, pa sedoše sa strane.",
   "dn14:3.15.1": "Tu im Buda Vipasī postupno izloži pouku,",
   "dn14:3.15.2": "govor o davanju, govor o vrlini, govor o nebesima; objasni opasnost,  propadanje i prljanje u čulnim zadovoljstvima, kao i blagoslov  obuzdavanja.",
   "dn14:3.15.3": "Kada je video da im je um spreman, prijemčiv, oslobođen prepreka, nadahnut i ispunjen poverenjem, izloži im on učenje koje je posebno svojstveno Budama:",
