Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -418,5 +418,6 @@
   "dn16:2.17.4": "neka je dobro prouče,",
   "dn16:2.17.5": "dobro osmotre.",
   "dn16:2.17.6": "Jer oni su poput božanstava neba trideset trojice.”",
-  "dn16:2.18.1": "Liććhavī su se vozili kočijama dokle je to bilo moguće, a onda siđoše i peške otidoše do Blaženoga. Kada su stigli, pokloniše mu se, pa sedoše sa strane."
+  "dn16:2.18.1": "Liććhavī su se vozili kočijama dokle je to bilo moguće, a onda siđoše i peške otidoše do Blaženoga. Kada su stigli, pokloniše mu se, pa sedoše sa strane.",
+  "dn16:2.18.2": "Dok su tako sedeli, Blaženi ih uputi, podstaknu, nadahnu i ohrabri govorom o Dhammi."
 }
